<resources>
    <string name="app_name">Flint Chat Core</string>
    <string name="welcome_msg">Welcome</string>
    <string name="log_in_msg">Login to continue</string>
    <string name="email_msg">Email</string>
    <string name="pass_msg">Password</string>
    <string name="sign_in_msg">Sign In</string>
    <string name="create_account_msg">Create New Account</string>
    <string name="new_account_msg">New account</string>
    <string name="add_image_msg">Add Image</string>
    <string name="name_msg">Name</string>
    <string name="confirm_pass_msg">Confirm Password</string>
    <string name="sign_up_msg">Sign Up</string>
    <string name="new_contact_msg">Select new contact</string>
    <string name="add_user_msg">Add Contact</string>
    <string name="type_message_msg">Type to message</string>
    <string name="send_msg">send Message</string>
    <string name="text_sample">Some Text</string>
    <string name="delete_user_msg">Delete user</string>
    <string name="ge_back_msg">Go back</string>
</resources>