<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_21sdp"
    android:scrollbars="none"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/welcome_msg"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_21ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="@string/log_in_msg"
            android:textColor="@color/gray_200"
            android:textSize="@dimen/_21ssp"
            android:textStyle="bold" />

        <!--Edit texts-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_txt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/background_input_txt"
                android:hint="@string/email_msg"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/_16sdp"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_14ssp" />

            <EditText
                android:id="@+id/pass_txt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:background="@drawable/background_input_txt"
                android:hint="@string/pass_msg"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_16sdp"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>

        <!--Actions-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signInBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:text="@string/sign_in_msg"
                    android:textColor="@color/white_100"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_8sdp" />

                <ProgressBar
                    android:id="@+id/progressBarSign"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>

            </FrameLayout>

            <TextView
                android:id="@+id/signUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:text="@string/create_account_msg"
                android:drawablePadding="@dimen/_7sdp"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_add_new_account_25" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>