<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InfoUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_bar_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/primary"
        android:padding="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backBtn"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:backgroundTint="@color/gray_100"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_back_page"
            android:contentDescription="@string/ge_back_msg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white_100" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/deleteBtn"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:backgroundTint="@color/gray_100"
            android:padding="@dimen/_4sdp"
            android:visibility="gone"
            android:src="@drawable/ic_delete_simple"
            android:contentDescription="@string/delete_user_msg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white_100" />

        <TextView
            android:id="@+id/top_action_bar_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:textColor="@color/white_100"
            android:textSize="@dimen/_18ssp"
            android:hint="@string/text_sample"
            android:textColorHint="@color/white_100"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/backBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/backBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/action_bar_top">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_user_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imagePreview"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_100sdp"
            app:riv_oval="true"
            android:background="@drawable/background_icon_main"
            app:riv_corner_radius="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/second_body_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_24sdp"
            android:layout_marginVertical="@dimen/_22sdp"
            android:hint="@string/text_sample"
            app:layout_constraintTop_toBottomOf="@id/imagePreview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>